<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gymappkotlin.fragment.home.UserHomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_user_home" />

    <fragment
        android:id="@+id/navigation_trainer_list"
        android:name="com.example.gymappkotlin.fragment.trainerlist.TrainerListFragment"
        android:label="@string/trainer"
        tools:layout="@layout/fragment_trainer_list" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.gymappkotlin.fragment.search.UserSearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_user_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.gymappkotlin.fragment.profile.UserProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.gymappkotlin.fragment.more.UserMoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_user_more_options" />
</navigation>
