<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        tools:context=".activity.ForgotPasswordActivity">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_45sdp"
            android:background="@drawable/notification_logo_wbg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/welcome"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/email"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_12ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="20"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/search_ic" />

            <VideoView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_below="@+id/edtEmail"
                android:background="@color/text_gray" />

        </RelativeLayout>

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:background="@drawable/accept_btn_bg"
            android:paddingLeft="@dimen/_18sdp"
            android:paddingRight="@dimen/_18sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/send"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>
</layout>